<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.portableinventory.presentation.viewmodel.ProductViewModel" />
    </data>

    <ScrollView style="@style/RootDimension">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_view_holder"
                style="@style/ProductCardView"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/product_imgView_contentDes"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_add_a_photo_24" />

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_barcode_label"
                app:layout_constraintBottom_toBottomOf="@+id/quantity_layout"
                app:layout_constraintEnd_toStartOf="@+id/quantity_layout" />

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/image_view_holder"
                app:layout_constraintTop_toTopOf="@+id/image_view_holder">

                <ImageView
                    android:id="@+id/button_inc_qty"
                    style="@style/CustomImageViewButton"
                    android:contentDescription="@string/inc_btn_content_desc"
                    android:src="@drawable/ic_baseline_add_box_24" />

                <TextView
                    android:id="@+id/text_view_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.quantity}"
                    android:textSize="70sp"
                    tools:text="0" />

                <ImageView
                    android:id="@+id/button_dec_qty"
                    style="@style/CustomImageViewButton"
                    android:contentDescription="@string/dec_btn_content_desc"
                    android:src="@drawable/ic_baseline_minus_box_24" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_product_id"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product_id"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_id_hint"
                    android:inputType="number"
                    android:text="@={viewmodel.id}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/product_id_instruction" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_product_name"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_layout_product_id"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_product_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product_name"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_name_hint"
                    android:text="@={viewmodel.name}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/product_name_instruction" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_product_expiryDate"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_layout_product_id"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product_expiryDate"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/expiry_date_hint"
                    android:inputType="date"
                    android:text="@={viewmodel.expiryDate}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/expiry_date_instruction" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_product_category"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_layout_product_id"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_product_expiryDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product_category"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category_hint"
                    android:text="@={viewmodel.category}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/category_instruction" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_product_recipe"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input_layout_product_id"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_product_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product_recipe"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/recipe_hint"
                    android:text="@={viewmodel.recipe}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/recipe_instruction" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_product"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_product_label"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_product_recipe"
                app:layout_constraintVertical_bias="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
