<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.portableinventory.domain.model.Product" />
    </data>

    <LinearLayout
        style="@style/RootDimension"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_baseline_no_image_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_name"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{product.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view"
                tools:text="Product Name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_expiry_date_label"
                style="@style/ProductDetailLabel"
                android:text="@string/expiry_date_label"
                app:layout_constraintEnd_toEndOf="@+id/text_view_name"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/text_view_name"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_expiry_date"
                style="@style/ProductDetailField"
                android:text="@{product.expiryDate}"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_expiry_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_expiry_date_label"
                app:layout_constraintTop_toTopOf="@+id/text_view_expiry_date_label"
                tools:text="Jan 01 2020" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_quantity_label"
                style="@style/ProductDetailLabel"
                android:text="@string/quantity_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_expiry_date_label"
                app:layout_constraintTop_toBottomOf="@+id/text_view_expiry_date_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_quantity"
                style="@style/ProductDetailField"
                android:text="@{product.quantity.toString()}"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_quantity_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_expiry_date"
                app:layout_constraintTop_toTopOf="@+id/text_view_quantity_label"
                tools:text="100" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_category_label"
                style="@style/ProductDetailLabel"
                android:text="@string/category_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_quantity_label"
                app:layout_constraintTop_toBottomOf="@+id/text_view_quantity_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_category"
                style="@style/ProductDetailField"
                android:text="@{product.category}"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_category_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_expiry_date"
                app:layout_constraintTop_toTopOf="@+id/text_view_category_label"
                tools:text="Fruit" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_recipe_label"
                style="@style/ProductDetailLabel"
                android:text="@string/recipe_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_category_label"
                app:layout_constraintTop_toBottomOf="@+id/text_view_category_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_recipe"
                style="@style/ProductDetailField"
                android:text="@{product.recipe}"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_recipe_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_expiry_date"
                app:layout_constraintTop_toTopOf="@+id/text_view_recipe_label"
                tools:text="Blue Berry Pie" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
