<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.portableinventory.domain.model.Product" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_img_holder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/img_content_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_no_image_24" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_name"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@{product.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/card_view_img_holder"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Product Name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_quantity_label"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_view_name"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="@+id/text_view_name"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name"
                app:layout_constraintVertical_bias="0.3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{product.quantity.toString()}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/text_view_quantity_label"
                app:layout_constraintTop_toTopOf="@+id/text_view_quantity_label"
                tools:text="10" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_expiry_date_label"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date_label"
                app:layout_constraintStart_toStartOf="@+id/text_view_quantity_label"
                app:layout_constraintTop_toBottomOf="@+id/text_view_quantity_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{product.expiryDate}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/text_view_quantity"
                app:layout_constraintTop_toBottomOf="@+id/text_view_quantity"
                tools:text="Jan 01 2020" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
